# installer-livecd

./: CMakeLists.txt  InstallerLiveCD.cpp  InstallerLiveCD.hpp  cloudos-livecd.kdev4  main.cpp
__cloudversity_build/: spec
